# ArtPark

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  vercel.json
api/: .env  index.py
api/data/: course_catalog.yaml  skills_graph.json
api/services/: claude_service.py  groq_service.py
api/tests/: sample_jd_tech_lead.txt
backend/: .env.example  Dockerfile  [...path].py  main.py  requirements.txt
backend/data/: course_catalog.yaml  skills_graph.json
backend/models/: schemas.py
backend/routers/: gap.py  parse.py  pathway.py
backend/services/: claude_service.py  gap_engine.py  groq_service.py  pathway_builder.py  youtube_service.py
backend/tests/: aditya_resume.txt  sample_resume_decay.txt  test_jd.txt  test_resume.txt  verify_algorithms.py
frontend/: Dockerfile  index.html  install_log.txt  package-lock.json  package.json
frontend/src/: App.jsx  LandingPage.jsx  PathwayPage.jsx  ReasoningTracePanel.jsx  UploadPage.jsx  index.css
