[project]
name = "pathforge"
version = "0.1.0"
description = "AI-Adaptive Onboarding Engine"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "groq==0.18.0",
    "httpx==0.28.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
